# assay-pdf

./: .editorconfig  .gitignore  .pre-commit-config.yaml  APPROVALS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature_request.md  new-rule-coverage.md
.github/workflows/: ci.yml  release.yml  url-liveness.yml
corpus/: manifest.json
docs/: architecture.md  cli.md  install.md  known-quirks.md  legal-positioning.md  methodology.md  reproducing.md  troubleshooting.md  usage.md
docs/adr/: 0001-deterministic-vs-committed-corpus.md  0002-engine-rule-mapping-strategy.md
reports/audit/: mislocated-closure.json
reports/baselines/: gwg2022_baseline.json
reports/gwg2022/: diff-all.json  diff-sheetcmyk-cmyk.json  per-fixture-all.json  per-fixture-sheetcmyk-cmyk.json  run_index.json  score-all.json  score-sheetcmyk-cmyk.json
scripts/: bootstrap.sh  check_manifest_sorted.py  gwg2022_baseline.py
spec/: checksums.json  gwg-2022-spec.xlsx  requirement-ids.json
spec/presets/: README.md
src/assay_pdf/: __init__.py  cli.py  hashing.py  logging.py  models.py
src/assay_pdf/fetcher/: __init__.py  download.py  manifest.py
src/assay_pdf/generator/: __init__.py  base.py  determinism.py  injectors.py  orchestrator.py  registry.py  rules.py  validation.py  variants.py
src/assay_pdf/generator/icc/: README.md
src/assay_pdf/harness/: __init__.py  driver.py  scorer.py
src/assay_pdf/harness/rule_maps/: pdftoolbox.json  pitstop.json
src/assay_pdf/harness/runners/: __init__.py  base.py  codexpdf.py  lintpdf.py  pdftoolbox.py  pitstop.py
src/assay_pdf/reports/: __init__.py  generator.py
src/assay_pdf/reports/templates/: html.j2  markdown.j2
src/assay_pdf/spec/: __init__.py  ingest.py  parser.py
tests/: conftest.py  test_determinism.py  test_generators.py  test_lint_runner.py  test_reports.py  test_scorer.py  test_spec_parser.py
