[project]
name = "assay-pdf"
version = "0.1.0"
description = "Open-source GWG 2022 conformance assay for PDF preflight engines."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Quincy Brooks", email = "iam@quincy.codes" },
]
keywords = [
    "pdf",
    "preflight",
    "gwg",
    "ghent-workgroup",
    "prepress",
    "pdf-x",
    "pdf-x4",
    "benchmark",
    "conformance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Printing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core PDF manipulation
    "pikepdf>=9.0",
    "reportlab>=4.2",
    "pypdf>=5.0",
    "Pillow>=11.0",
    "numpy>=2.0",
    # Spec parsing
    "openpyxl>=3.1",
    # CLI + reporting
    "typer>=0.15",
    "rich>=13.9",
    "jinja2>=3.1",
    # Data shapes + validation
    "pydantic>=2.9",
    # HTTP for fetcher
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-openpyxl>=3.1",
]

[project.scripts]
assay = "assay_pdf.cli:app"

[project.urls]
Homepage = "https://github.com/thinkneverland/assay-pdf"
Repository = "https://github.com/thinkneverland/assay-pdf"
Issues = "https://github.com/thinkneverland/assay-pdf/issues"
"Sister project: lintPDF" = "https://github.com/thinkneverland/lint-pdf"
"GWG 2022 spec" = "https://gwg.org/technical-specifications/gwg-2022-specifications/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assay_pdf"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/spec/gwg-2022-spec.xlsx",
    "/spec/gwg-2022-explanation.pdf",
    "/spec/gwg-2015-vs-2022.pdf",
    "/spec/requirement-ids.json",
    "/spec/checksums.json",
    "/spec/presets",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# ─── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
ignore_missing_imports = false

# Re-enable in Commit 3 once these are actually imported:
# [[tool.mypy.overrides]]
# module = ["pikepdf.*", "reportlab.*"]
# ignore_missing_imports = true

# ─── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_engine: marks tests that need a preflight engine binary present",
    "requires_vendor: marks tests that need GWG vendor assets fetched",
]

[tool.coverage.run]
source = ["src/assay_pdf"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
